test/types/string/assignToChar/testAssign.12.good
Helpers.chpl:15: In function 'testAssignVal':
Helpers.chpl:17: error: Cannot assign to uint(8) from string
  testAssign.chpl:28: called as testAssignVal(strBytes: string, type toType = uint(8))
